Fix compiler error for record example